refactor: improve readability and consistency in CODEOWNERS lexer and tests